Filtrando as pessoas pelo atributo ativo